# SysMonitor

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/widgets/: cpu.rs  disk.rs  memory.rs  mod.rs  network.rs  sys_information.rs  temperature.rs
